examples/valid/program46.c
int main(void) {
    int x;
    x = 5;
    x = x + 3;
    return x;
}

