examples/invalid/program29.c
int main(void) {
    int x;
    float f;
    x = 5;
    f = 3.14;
    x = f + "text";
    return x;
}

